@@ -1,5 +1,7 @@
 # AddDefaultCharset	UTF-8
 php_flag	display_errors	Off
+php_flag	log_errors	On
+php_value	error_log	logs/errors
 php_value	upload_max_filesize	2M
 
 <FilesMatch "(\.inc|\~)$|^_">
